--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
             <nav class="nav-links">
                 <a href="#" class="nav-link">Home</a>
                 <a href="prompts.html" class="nav-link">Prompts</a>
-                <a href="vault.html" class="nav-link">Vault</a>
+                <a href="vault.html" class="nav-link">Free Prompts</a>
                 <a href="community.html" class="nav-link">Community</a>
                 <a href="consulting.html" class="nav-link">Work</a>
             </nav>
@@ -718,14 +718,14 @@
                 </a>
 
 
-                <a href="vault.html" class="radio-button">
+                <a href="https://drive.google.com/drive/folders/1Lg5L3WbJSESl58WH2nfqOY93rChf4Q9r?usp=drive_link" class="radio-button" target="_blank">
                     <div class="button-left">
                         <svg class="button-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M12,1L3,5V11C3,16.55 6.84,21.74 12,23C17.16,21.74 21,16.55 21,11V5L12,1M12,7C13.4,7 14.8,8.6 14.8,10V11H16V17H8V11H9.2V10C9.2,8.6 10.6,7 12,7M12,8.2C11.2,8.2 10.4,8.7 10.4,10V11H13.6V10C13.6,8.7 12.8,8.2 12,8.2Z"/>
                         </svg>
-                        <span class="button-text">Prompt Vault</span>
+                        <span class="button-text">Free Prompts</span>
                     </div>
-                    <span class="button-action">38K Prompts</span>
+                    <span class="button-action">Download</span>
                 </a>
 
 
