fix about nav link

--- a/index.html
+++ b/index.html
@@ -679,6 +679,7 @@
                 <a href="prompts.html" class="nav-link">Prompts</a>
                 <a href="vault.html" class="nav-link">Free Prompts</a>
                 <a href="community.html" class="nav-link">Community</a>
+                <a href="about.html" class="nav-link">About</a>
                 <a href="consulting.html" class="nav-link">Work</a>
             </nav>
         </div>
@@ -691,6 +692,7 @@
         <a href="prompts.html" class="nav-link">Prompts</a>
         <a href="vault.html" class="nav-link">Vault</a>
         <a href="community.html" class="nav-link">Community</a>
+        <a href="about.html" class="nav-link">About</a>
         <a href="consulting.html" class="nav-link">Work</a>
     </div>
 
