--- a/index.html
+++ b/index.html
@@ -676,10 +676,11 @@
             <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
             <nav class="nav-links">
                 <a href="#" class="nav-link">Home</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="services.html" class="nav-link">Services</a>
                 <a href="prompts.html" class="nav-link">Prompts</a>
-                <a href="vault.html" class="nav-link">Free Prompts</a>
-                <a href="community.html" class="nav-link">Community</a>
-                <a href="consulting.html" class="nav-link">Work</a>
+                <a href="vault.html" class="nav-link">Free Vault</a>
+                <a href="consulting.html" class="nav-link">Consulting</a>
             </nav>
         </div>
     </div>
@@ -688,10 +689,11 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
         <a href="#" class="nav-link">Home</a>
+        <a href="about.html" class="nav-link">About</a>
+        <a href="services.html" class="nav-link">Services</a>
         <a href="prompts.html" class="nav-link">Prompts</a>
-        <a href="vault.html" class="nav-link">Vault</a>
-        <a href="community.html" class="nav-link">Community</a>
-        <a href="consulting.html" class="nav-link">Work</a>
+        <a href="vault.html" class="nav-link">Free Vault</a>
+        <a href="consulting.html" class="nav-link">Consulting</a>
     </div>
 
 
