--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
         }
 
 
-        .nav-link:hover {
+        .nav-link:hover {https://t.me/+hjjZRpBnIrg2ZmM1
+
+put this link to the join whatsapp
             color: var(--orange);
             text-shadow: 0 0 10px rgba(255, 111, 0, 0.5);
         }
