--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
         }
 
 
-        .nav-link:hover {https://t.me/+hjjZRpBnIrg2ZmM1
+        .nav-link:hover {
 
-put this link to the join whatsapp
+put this link https://t.me/+hjjZRpBnIrg2ZmM1
+
+put this link to the join whatsappto the join whatsapp
             color: var(--orange);
             text-shadow: 0 0 10px rgba(255, 111, 0, 0.5);
         }
