added term.html and update index.html

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                         </svg>
                         <span class="button-text">Support Me</span>
                     </div>
-                    <span class="button-action">Donate</span>
+                    <span class="button-action">Donate Us</span>
                 </a>
             </div>
 
