--- a/index.html
+++ b/index.html
@@ -680,14 +680,14 @@
                     <span class="button-action">4.8K Members</span>
                 </a>
 
-                <a href="consulting.html" class="radio-button">
+                <a href="mailto:Farghalx@farghalx.org" class="radio-button">
                     <div class="button-left">
                         <svg class="button-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M20 6h-2.18c.11-.31.18-.65.18-1a2.996 2.996 0 0 0-5.5-1.65l-.5.67-.5-.68C10.96 2.54 10.05 2 9 2 7.34 2 6 3.34 6 5c0 .35.07.69.18 1H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-5-2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM9 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z"/>
                         </svg>
                         <span class="button-text">Work with Me</span>
                     </div>
-                    <span class="button-action">Apply</span>
+                    <span class="button-action">Email Us</span>
                 </a>
 
                 <a href="support.html" class="radio-button">
