--- a/index.html
+++ b/index.html
@@ -622,6 +622,7 @@
                 <a href="#" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="services.html" class="nav-link">Services</a>
+                <a href="blog.html" class="nav-link">Blog</a>
                 <a href="prompts.html" class="nav-link">Prompts</a>
                 <a href="vault.html" class="nav-link">Free Vault</a>
                 <a href="consulting.html" class="nav-link">Consulting</a>
@@ -634,6 +635,7 @@
         <a href="#" class="nav-link">Home</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="services.html" class="nav-link">Services</a>
+        <a href="blog.html" class="nav-link">Blog</a>
         <a href="prompts.html" class="nav-link">Prompts</a>
         <a href="vault.html" class="nav-link">Free Vault</a>
         <a href="consulting.html" class="nav-link">Consulting</a>
