--- a/about.html
+++ b/about.html
@@ -612,7 +612,7 @@
                 <a href="blog.html" class="nav-link">Blog</a>
                 <a href="prompts.html" class="nav-link">Prompts</a>
                 <a href="vault.html" class="nav-link">Free Vault</a>
-                <a href="consulting.html" class="nav-link">Consulting</a>
+                <a href="https://tally.so/r/mORN7A" class="nav-link" target="_blank">Book Consultation</a>
             </nav>
         </div>
     </div>
@@ -628,7 +628,7 @@
         <a href="consulting.html" class="nav-link">Consulting</a>
         <a href="#" class="nav-link active">About</a>
         <a href="services.html" class="nav-link">Services</a>
-        <a href="consulting.html" class="nav-link">Work</a>
+        <a href="https://tally.so/r/mORN7A" class="nav-link" target="_blank">Book Consultation</a>
     </div>
 
     <!-- Main Container -->
@@ -792,13 +792,13 @@
             <h2 class="cta-title">Ready to Automate Your Business?</h2>
             <p class="cta-subtitle">Let's discuss how AI can transform your operations and scale your business to the next level. No fluff, just practical solutions that deliver results.</p>
             <div class="cta-buttons">
-                <a href="consulting.html" class="cta-button">
+                <a href="https://tally.so/r/mORN7A" class="cta-button" target="_blank">
                     <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M20 6h-2.18c.11-.31.18-.65.18-1a2.996 2.996 0 0 0-5.5-1.65l-.5.67-.5-.68C10.96 2.54 10.05 2 9 2 7.34 2 6 3.34 6 5c0 .35.07.69.18 1H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-5-2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM9 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z"/>
                     </svg>
                     Book Consultation
                 </a>
-                <a href="https://wa.me/YOUR_WHATSAPP_NUMBER" class="cta-button cta-button-secondary" target="_blank">
+                <a href="https://wa.me/601128801781" class="cta-button cta-button-secondary" target="_blank">
                     <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335 .157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.890-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.488"/>
                     </svg>
