doply the changes

--- a/about.html
+++ b/about.html
@@ -610,6 +610,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="#" class="nav-link active">About</a>
                 <a href="services.html" class="nav-link">Services</a>
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
                 <a href="blog.html" class="nav-link">Blog</a>
                 <a href="prompts.html" class="nav-link">Prompts</a>
                 <a href="vault.html" class="nav-link">Free Vault</a>
@@ -623,6 +624,7 @@
         <a href="index.html" class="nav-link">Home</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="services.html" class="nav-link">Services</a>
+        <a href="portfolio.html" class="nav-link">Portfolio</a>
         <a href="blog.html" class="nav-link">Blog</a>
         <a href="prompts.html" class="nav-link">Prompts</a>
         <a href="vault.html" class="nav-link">Free Vault</a>
