--- a/index.html
+++ b/index.html
@@ -683,6 +683,7 @@
                 <a href="#" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="services.html" class="nav-link">Services</a>
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
                 <a href="blog.html" class="nav-link">Blog</a>
                 <a href="prompts.html" class="nav-link">Prompts</a>
                 <button
@@ -703,6 +704,7 @@
         <a href="#" class="nav-link">Home</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="services.html" class="nav-link">Services</a>
+        <a href="portfolio.html" class="nav-link">Portfolio</a>
         <a href="blog.html" class="nav-link">Blog</a>
         <a href="prompts.html" class="nav-link">Prompts</a>
         <a href="vault.html" class="nav-link">Free Vault</a>
@@ -750,25 +752,25 @@
                     <span class="button-action">4.8K Members</span>
                 </a>
 
-                <a href="mailto:Farghalx@farghalx.org" class="radio-button">
+                <a href="portfolio.html" class="radio-button">
                     <div class="button-left">
                         <svg class="button-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M20 6h-2.18c.11-.31.18-.65.18-1a2.996 2.996 0 0 0-5.5-1.65l-.5.67-.5-.68C10.96 2.54 10.05 2 9 2 7.34 2 6 3.34 6 5c0 .35.07.69.18 1H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-5-2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM9 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z"/>
                         </svg>
-                        <span class="button-text">Work with Me</span>
+                        <span class="button-text">View My Work</span>
                     </div>
-                    <span class="button-action">Email Us</span>
+                    <span class="button-action">View Portfolio</span>
                 </a>
 
-                <a href="support.html" class="radio-button">
+                <button class="radio-button tally-popup-btn" data-tally-open="mORN7A" data-tally-width="600" data-tally-emoji-text="📞" data-tally-emoji-animation="wave">
                     <div class="button-left">
                         <svg class="button-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M12,21.35L10.55,20.03C5.4,15.36 2,12.27 2,8.5 C2,5.41 4.42,3 7.5,3C9.24,3 10.91,3.81 12,5.08C13.09,3.81 14.76,3 16.5,3C19.58,3 22,5.41 22,8.5C22,12.27 18.6,15.36 13.45,20.03L12,21.35Z"/>
                         </svg>
-                        <span class="button-text">Support Me</span>
+                        <span class="button-text">Book a Consultation</span>
                     </div>
-                    <span class="button-action">Donate Us</span>
-                </a>
+                    <span class="button-action">Book Now</span>
+                </button>
             </div>
 
             <!-- Radio Control Knobs -->
