--- a/terms.html
+++ b/terms.html
@@ -5,8 +5,484 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions | Farghal X</title>
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        :root {
+            --black: #000000;
+            --dark-grey: #0a0a0a;
+            --orange: #FF6F00;
+            --neon-yellow: #FFC200;
+            --warm-taupe: #B8A28C;
+            --off-white: #F5F5F5;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, #000000 0%, #0a0a0a 50%, #1a1a1a 100%);
+            color: var(--off-white);
+            overflow-x: hidden;
+            min-height: 100vh;
+        }
+
+        /* Background texture */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background:
+                radial-gradient(circle at 20% 80%, rgba(255, 111, 0, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 20%, rgba(255, 194, 0, 0.08) 0%, transparent 50%),
+                repeating-linear-gradient(
+                    0deg,
+                    transparent,
+                    transparent 2px,
+                    rgba(255, 255, 255, 0.01) 2px,
+                    rgba(255, 255, 255, 0.01) 4px
+                );
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        /* Header */
+        .header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid rgba(255, 111, 0, 0.2);
+            z-index: 1000;
+            padding: 15px 30px;
+        }
+
+        .header-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .logo {
+            font-family: 'Orbitron', monospace;
+            font-size: 24px;
+            font-weight: 900;
+            color: var(--neon-yellow);
+            text-shadow: 0 0 20px rgba(255, 194, 0, 0.5);
+            text-decoration: none;
+        }
+
+        .mobile-menu-btn {
+            display: none;
+            background: none;
+            border: none;
+            color: var(--off-white);
+            font-size: 24px;
+            cursor: pointer;
+            z-index: 1001;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 30px;
+            align-items: center;
+        }
+
+        .nav-link {
+            color: var(--off-white);
+            text-decoration: none;
+            font-weight: 500;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .nav-link:hover {
+            color: var(--orange);
+            text-shadow: 0 0 10px rgba(255, 111, 0, 0.5);
+        }
+
+        /* Main Content */
+        .main-content {
+            padding-top: 120px;
+            max-width: 800px;
+            margin: 0 auto;
+            padding-left: 30px;
+            padding-right: 30px;
+            padding-bottom: 60px;
+        }
+
+        .page-title {
+            font-family: 'Orbitron', monospace;
+            font-size: 48px;
+            font-weight: 900;
+            background: linear-gradient(45deg, var(--neon-yellow), var(--orange));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            text-align: center;
+            margin-bottom: 20px;
+            text-shadow: 0 0 30px rgba(255, 194, 0, 0.5);
+        }
+
+        .page-subtitle {
+            text-align: center;
+            color: var(--warm-taupe);
+            font-size: 18px;
+            margin-bottom: 60px;
+        }
+
+        .terms-section {
+            background: linear-gradient(135deg, rgba(10, 10, 10, 0.95) 0%, rgba(0, 0, 0, 0.98) 100%);
+            backdrop-filter: blur(20px);
+            border: 2px solid rgba(255, 111, 0, 0.3);
+            border-radius: 25px;
+            padding: 40px;
+            margin-bottom: 30px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .terms-section h2 {
+            font-family: 'Orbitron', monospace;
+            color: var(--orange);
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+
+        .terms-section h3 {
+            color: var(--neon-yellow);
+            font-size: 18px;
+            margin-bottom: 15px;
+            margin-top: 25px;
+        }
+
+        .terms-section p {
+            line-height: 1.8;
+            margin-bottom: 15px;
+            color: var(--off-white);
+        }
+
+        .terms-section ul {
+            margin-left: 20px;
+            margin-bottom: 15px;
+        }
+
+        .terms-section li {
+            line-height: 1.6;
+            margin-bottom: 8px;
+            color: var(--off-white);
+        }
+
+        .contact-info {
+            background: linear-gradient(135deg, rgba(255, 111, 0, 0.1) 0%, rgba(255, 194, 0, 0.05) 100%);
+            border: 2px solid var(--orange);
+            border-radius: 15px;
+            padding: 25px;
+            text-align: center;
+            margin-top: 40px;
+        }
+
+        .contact-info h3 {
+            color: var(--neon-yellow);
+            margin-bottom: 15px;
+        }
+
+        .contact-info p {
+            margin-bottom: 10px;
+        }
+
+        .contact-info a {
+            color: var(--orange);
+            text-decoration: none;
+        }
+
+        .contact-info a:hover {
+            color: var(--neon-yellow);
+        }
+
+        /* Mobile Menu */
+        .mobile-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 80%;
+            max-width: 300px;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.95);
+            backdrop-filter: blur(20px);
+            border-left: 1px solid rgba(255, 111, 0, 0.3);
+            z-index: 1000;
+            transition: right 0.3s ease;
+            padding: 80px 30px 30px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .mobile-menu.active {
+            right: 0;
+        }
+
+        .mobile-menu .nav-link {
+            font-size: 18px;
+            padding: 10px 0;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .header {
+                padding: 12px 20px;
+            }
+
+            .logo {
+                font-size: 20px;
+            }
+
+            .nav-links {
+                display: none;
+            }
+
+            .mobile-menu-btn {
+                display: block;
+            }
+
+            .main-content {
+                padding-left: 20px;
+                padding-right: 20px;
+                padding-top: 100px;
+            }
+
+            .page-title {
+                font-size: 36px;
+            }
+
+            .terms-section {
+                padding: 25px;
+            }
+
+            .terms-section h2 {
+                font-size: 20px;
+            }
+
+            .terms-section h3 {
+                font-size: 16px;
+            }
+
+            .contact-info {
+                padding: 20px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .main-content {
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+
+            .page-title {
+                font-size: 28px;
+            }
+
+            .terms-section {
+                padding: 20px;
+            }
+
+            .terms-section h2 {
+                font-size: 18px;
+            }
+
+            .terms-section h3 {
+                font-size: 14px;
+            }
+
+            .terms-section p,
+            .terms-section li {
+                font-size: 14px;
+            }
+
+            .contact-info {
+                padding: 15px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <H1>Terms and Condition</H1>
+    <!-- Header -->
+    <div class="header">
+        <div class="header-content">
+            <a href="index.html" class="logo">FARGHAL X</a>
+            <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
+            <nav class="nav-links">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="services.html" class="nav-link">Services</a>
+                <a href="portfolio.html" class="nav-link">Portfolio</a>
+                <a href="blog.html" class="nav-link">Blog</a>
+                <a href="prompts.html" class="nav-link">Prompts</a>
+            </nav>
+        </div>
+    </div>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu" id="mobileMenu">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="about.html" class="nav-link">About</a>
+        <a href="services.html" class="nav-link">Services</a>
+        <a href="portfolio.html" class="nav-link">Portfolio</a>
+        <a href="blog.html" class="nav-link">Blog</a>
+        <a href="prompts.html" class="nav-link">Prompts</a>
+        <a href="terms.html" class="nav-link">Terms</a>
+    </div>
+
+    <!-- Main Content -->
+    <div class="main-content">
+        <h1 class="page-title">TERMS & CONDITIONS</h1>
+        <p class="page-subtitle">Legal terms governing the use of FarghalX services and AI automation solutions</p>
+
+        <div class="terms-section">
+            <h2>1. Acceptance of Terms</h2>
+            <p>By accessing and using FarghalX services, you acknowledge that you have read, understood, and agree to be bound by these Terms and Conditions. If you do not agree to these terms, please do not use our services.</p>
+
+            <h3>Last Updated</h3>
+            <p>These terms were last updated on January 2025 and may be modified at any time with notice to users.</p>
+        </div>
+
+        <div class="terms-section">
+            <h2>2. Services Description</h2>
+            <p>FarghalX provides AI automation consulting and implementation services, including but not limited to:</p>
+            <ul>
+                <li>AI strategy consultation and business process optimization</li>
+                <li>WhatsApp business automation and CRM integration</li>
+                <li>Custom AI agent development and deployment</li>
+                <li>Business intelligence and analytics solutions</li>
+                <li>Training and educational resources for AI implementation</li>
+            </ul>
+
+            <h3>Service Availability</h3>
+            <p>Services are provided "as is" and availability may vary. We reserve the right to modify, suspend, or discontinue any service at any time with reasonable notice.</p>
+        </div>
+
+        <div class="terms-section">
+            <h2>3. Client Responsibilities</h2>
+            <p>As a client of FarghalX services, you agree to:</p>
+            <ul>
+                <li>Provide accurate and complete information necessary for service delivery</li>
+                <li>Cooperate in good faith during implementation and consultation processes</li>
+                <li>Maintain confidentiality of any proprietary methodologies shared</li>
+                <li>Use AI solutions ethically and in compliance with applicable laws</li>
+                <li>Provide timely feedback and approvals as requested</li>
+            </ul>
+        </div>
+
+        <div class="terms-section">
+            <h2>4. Intellectual Property</h2>
+            <p>All intellectual property rights in FarghalX methodologies, frameworks, and proprietary solutions remain with FarghalX. Clients receive usage rights for implemented solutions but not ownership of underlying intellectual property.</p>
+
+            <h3>Client Data</h3>
+            <p>Clients retain ownership of their business data. FarghalX may use anonymized, aggregated data for service improvement and case study purposes with client consent.</p>
+        </div>
+
+        <div class="terms-section">
+            <h2>5. Confidentiality</h2>
+            <p>FarghalX maintains strict confidentiality regarding client business information, processes, and data. We implement appropriate security measures to protect sensitive information and will not disclose confidential information to third parties without explicit consent.</p>
+        </div>
+
+        <div class="terms-section">
+            <h2>6. Limitation of Liability</h2>
+            <p>FarghalX's liability is limited to the amount paid for services in the preceding 12 months. We are not liable for indirect, consequential, or punitive damages. AI solutions are provided as tools to assist business operations; ultimate responsibility for business decisions remains with the client.</p>
+
+            <h3>Performance Disclaimers</h3>
+            <p>While we strive to deliver optimal results, AI system performance may vary based on data quality, implementation environment, and external factors beyond our control.</p>
+        </div>
+
+        <div class="terms-section">
+            <h2>7. Payment Terms</h2>
+            <p>Payment terms are specified in individual service agreements. Standard terms include:</p>
+            <ul>
+                <li>50% deposit required for project initiation</li>
+                <li>Remaining balance due upon project completion or as outlined in payment schedule</li>
+                <li>Late payments may incur interest charges as specified in agreements</li>
+                <li>Refund policies vary by service type and project stage</li>
+            </ul>
+        </div>
+
+        <div class="terms-section">
+            <h2>8. Termination</h2>
+            <p>Either party may terminate services with 30 days written notice. In case of termination:</p>
+            <ul>
+                <li>Client remains responsible for payment of services rendered</li>
+                <li>FarghalX will provide completed work and transition support</li>
+                <li>Confidentiality obligations continue post-termination</li>
+                <li>Access to proprietary tools and platforms may be discontinued</li>
+            </ul>
+        </div>
+
+        <div class="terms-section">
+            <h2>9. Governing Law</h2>
+            <p>These terms are governed by Malaysian law. Any disputes will be resolved through arbitration in Kuala Lumpur, Malaysia, unless otherwise agreed in writing.</p>
+        </div>
+
+        <div class="terms-section">
+            <h2>10. Contact Information</h2>
+            <p>For questions about these terms or FarghalX services, contact us using the information below.</p>
+        </div>
+
+        <div class="contact-info">
+            <h3>Get in Touch</h3>
+            <p>Email: <a href="mailto:Farghalx@farghalx.org">Farghalx@farghalx.org</a></p>
+            <p>WhatsApp: <a href="https://wa.me/601128801781">+60 11-2880 1781</a></p>
+            <p>Location: Kuala Lumpur, Malaysia</p>
+            <p>Business Hours: 9 AM - 6 PM MYT (Monday - Friday)</p>
+        </div>
+    </div>
+
+    <script>
+        // Mobile menu toggle
+        const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+        const mobileMenu = document.getElementById('mobileMenu');
+
+        if (mobileMenuBtn && mobileMenu) {
+            mobileMenuBtn.addEventListener('click', () => {
+                mobileMenu.classList.toggle('active');
+                mobileMenuBtn.textContent = mobileMenu.classList.contains('active') ? '✕' : '☰';
+            });
+
+            // Close mobile menu when clicking outside
+            document.addEventListener('click', (e) => {
+                if (!mobileMenu.contains(e.target) && e.target !== mobileMenuBtn) {
+                    mobileMenu.classList.remove('active');
+                    mobileMenuBtn.textContent = '☰';
+                }
+            });
+        }
+
+        // Smooth scroll for internal links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+    </script>
 </body>
 </html>
