--- a/portfolio.html
+++ b/portfolio.html
@@ -553,6 +553,7 @@
                 <a href="services.html" class="nav-link">Services</a>
                 <a href="portfolio.html" class="nav-link" style="color: var(--orange);">Portfolio</a>
                 <a href="blog.html" class="nav-link">Blog</a>
+                <a href="prompts.html" class="nav-link">Prompts</a>
             </nav>
         </div>
     </div>
