--- a/index.html
+++ b/index.html
@@ -680,35 +680,24 @@
             <div class="logo">FARGHAL X</div>
             <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
                         <nav class="nav-links">
-                <a href="#" class="nav-link">Home</a>
+                <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="services.html" class="nav-link">Services</a>
                 <a href="portfolio.html" class="nav-link">Portfolio</a>
                 <a href="blog.html" class="nav-link">Blog</a>
                 <a href="prompts.html" class="nav-link">Prompts</a>
-                <button
-                    class="tally-popup-btn ml-4"
-                    data-tally-open="mORN7A"
-                    data-tally-width="400"
-                    data-tally-emoji-text="👋"
-                    data-tally-emoji-animation="wave"
-                >
-                    Contact Us
-                </button>
             </nav>
         </div>
     </div>
 
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobileMenu">
-        <a href="#" class="nav-link">Home</a>
+        <a href="index.html" class="nav-link">Home</a>
         <a href="about.html" class="nav-link">About</a>
         <a href="services.html" class="nav-link">Services</a>
         <a href="portfolio.html" class="nav-link">Portfolio</a>
         <a href="blog.html" class="nav-link">Blog</a>
         <a href="prompts.html" class="nav-link">Prompts</a>
-        <a href="vault.html" class="nav-link">Free Vault</a>
-        <a href="consulting.html" class="nav-link">Consulting</a>
     </div>
 
     <!-- Main Container -->
