--- a/services.html
+++ b/services.html
@@ -728,7 +728,7 @@
                 <a href="services.html" class="nav-link" style="color: #FFA500;">Services</a>
                 <a href="portfolio.html" class="nav-link">Portfolio</a>
                 <a href="blog.html" class="nav-link">Blog</a>
-                <a href="prompts.html" class="nav-link">Prompts</a>
+                <a href="https://ko-fi.com/farghalx/shop" class="nav-link" target="_blank">Products & Prompts</a>
             </nav>
         </div>
     </div>
@@ -740,7 +740,7 @@
         <a href="services.html" class="nav-link">Services</a>
         <a href="portfolio.html" class="nav-link">Portfolio</a>
         <a href="blog.html" class="nav-link">Blog</a>
-        <a href="prompts.html" class="nav-link">Prompts</a>
+        <a href="https://ko-fi.com/farghalx/shop" class="nav-link" target="_blank">Products & Prompts</a>
     </div>
 
     <div class="container">
