--- a/blog.html
+++ b/blog.html
@@ -384,7 +384,7 @@
                 <a href="services.html" class="nav-link">Services</a>
                 <a href="portfolio.html" class="nav-link">Portfolio</a>
                 <a href="blog.html" class="nav-link">Blog</a>
-                <a href="prompts.html" class="nav-link">Prompts</a>
+                <a href="https://ko-fi.com/farghalx/shop" class="nav-link" target="_blank">Products & Prompts</a>
             </nav>
         </div>
     </header>
@@ -396,7 +396,7 @@
         <a href="services.html" class="nav-link">Services</a>
         <a href="portfolio.html" class="nav-link">Portfolio</a>
         <a href="blog.html" class="nav-link">Blog</a>
-        <a href="prompts.html" class="nav-link">Prompts</a>
+        <a href="https://ko-fi.com/farghalx/shop" class="nav-link" target="_blank">Products & Prompts</a>
     </div>
 
     <div class="container">
