--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
                 <a href="services.html" class="nav-link">Services</a>
                 <a href="portfolio.html" class="nav-link">Portfolio</a>
                 <a href="blog.html" class="nav-link">Blog</a>
-                <a href="prompts.html" class="nav-link">Prompts</a>
+                <a href="https://ko-fi.com/farghalx/shop" class="nav-link" target="_blank">Products & Prompts</a>
             </nav>
         </div>
     </div>
@@ -697,7 +697,7 @@
         <a href="services.html" class="nav-link">Services</a>
         <a href="portfolio.html" class="nav-link">Portfolio</a>
         <a href="blog.html" class="nav-link">Blog</a>
-        <a href="prompts.html" class="nav-link">Prompts</a>
+        <a href="https://ko-fi.com/farghalx/shop" class="nav-link" target="_blank">Products & Prompts</a>
     </div>
 
     <!-- Main Container -->
