--- a/portfolio.html
+++ b/portfolio.html
@@ -637,7 +637,7 @@
                 <a href="services.html" class="nav-link">Services</a>
                 <a href="portfolio.html" class="nav-link" style="color: var(--orange);">Portfolio</a>
                 <a href="blog.html" class="nav-link">Blog</a>
-                <a href="prompts.html" class="nav-link">Prompts</a>
+                <a href="https://ko-fi.com/farghalx/shop" class="nav-link" target="_blank">Products & Prompts</a>
             </nav>
         </div>
     </div>
